--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -6,157 +6,163 @@ La ferme des 3 chênes: Analytics
 
 
 {% block content %} 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js" type="text/javascript" > </script> 
     <nav>
         <ul>
             <li class="deroulant"><a href="#">Choisir un Graphique à afficher &ensp;</a>
                 <ul class="sous">
-                    <li><a href="#" title="Graphe 1" onclick="updateChart('pie', 'Pie Graphics', ['A', 'B', 'C', 'D'], [20, 40, 17, 23]), show_para('para1'), hide_para('para2', 'para3')" >Graphique 1 </a> </li>
+                    <li><a href="#" title="Graphe 1" onclick="updateChart('pie', 'Pie Graphics', ['A', 'B', 'C', 'D'], [20, 40, 17, 23])" >Graphique 1 </a> </li>
 
-                    <li><a href="#" title="Graphe 2"onclick="updateChart('line', 'Graphe 2', ['ee', 'gg', 'dd', 'eed'], [77, 39, 47, 65]), show_para('para2'), hide_para('para1', 'para3')">Graphique 2</a></li>
+                    <li><a href="#" title="Graphe 2"onclick="updateChart('line', 'Graphe 2', ['ee', 'gg', 'dd', 'eed'], [77, 39, 47, 65])">Graphique 2</a></li>
 
-                    <li><a href="#" title="Graphe 3"onclick="updateChart('bar', 'Graphe 3', ['1', '10', '100', '1000'], [19, 29, 39, 49]), show_para('para3'), hide_para('para2', 'para1')" >Graphique 3</a></li>
+                    <li><a href="#" title="Graphe 3"onclick="updateChart('bar', 'Graphe 3', ['1', '10', '100', '1000'], [19, 29, 39, 49])" >Graphique 3</a></li>
                 </ul>
             </li>
         </ul>
     </nav>
 
-    <!-- Pour le graphique en camembert, utlise "pie" :) -->
+    
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
-    <div style="text-align: center;">
-        <canvas id="line" width="800" height="400" style="display: none;"></canvas>
+    <div style="text-align: center;"> <!-- Premier Canvas: graphe en style line -->
+        <canvas id="line" width="800" height="400" style="display: none;"></canvas> 
     </div>
+    
+    <div style="text-align: center;"> <!-- Deuxième Canvas: graphe en style bar -->
+        <canvas id="bar" width="800" height="400" style="display: none;"></canvas>
+    </div>
+    
+    <div style = "text-align: center;"> <!-- Premier Canvas: graphe en style pie -->
+        <canvas id ="pie" width="800" height="400" style="display: none;"></canvas>
+    </div>    
+    
+
     <script>
         const ctx = document.getElementById('line').getContext('2d');
         const line = new Chart(ctx, {
-        type: ['line'],   // le type du graphique
-        data: {        // les données
-            labels: [],
-            datasets: [{
-                        borderColor: 'rgba(160, 167, 167, 1)',
-                        label: 'Line Graphics ',
-                        data: []
-                    }]
-            },
-        options: {
-            responsive: false }
-            }
-        );
-    
-    </script>
-    <div style="text-align: center;">
-        <canvas id="bar" width="800" height="400" style="display: none;"></canvas>
-    </div>
-    <script>
+            type: ['line'],   // le type du graphique
+            data: {        // les données
+                labels: [],
+                datasets: [{
+                            borderColor: 'rgba(160, 167, 167, 1)',
+                            label: 'Line Graphics ',
+                            data: []
+                        }]
+                },
+            options: {
+                responsive: false }
+                }
+            );
+
         const ctx2 = document.getElementById('bar').getContext('2d');
         const bar = new Chart(ctx2, {
-        type: ['bar'],   // le type du graphique
-        data: {        // les données
-            labels: [],
-            datasets: [{
-                        backgroundColor: 'rgba(240, 240, 240, 0.9)',
-                        label: 'Bar Graphics',
-                        data: []
-                    }]
-            },
-        options: {
-            responsive: false }
-            }
-        );
+            type: ['bar'],   // le type du graphique
+            data: {        // les données
+                labels: [],
+                datasets: [{
+                            backgroundColor: 'rgba(240, 240, 240, 0.9)',
+                            label: 'Bar Graphics',
+                            data: []
+                        }]
+                },
+            options: {
+                responsive: false }
+                }
+            );
 
-    </script>
-    <div style = "text-align: center;">
-        <canvas id ="pie" width="800" height="400" style="display: none;"></canvas>
-    </div>    
-    <script> 
         const ctx1 = document.getElementById('pie').getContext('2d');
         const pie = new Chart(ctx1, {
-        type: ['pie'],   // le type du graphique
-        data: {        // les données
-            labels: [],
-            datasets: [{
-                        label: 'Votes ',
-                        data: [],
-                        backgroundColor: ['rgb(255, 99, 132)', 'rgb(54, 162, 235)', 'rgb(255, 205, 86)', 'rgb(35, 46, 46)', 'rgb(114, 145, 190)', 'rgb(90, 189, 45)', 'rgb(240, 200, 133)'] 
-                    }]
-            },
-        options: {
-            responsive: false,
-         }
+            type: ['pie'],   // le type du graphique
+            data: {        // les données
+                labels: [],
+                datasets: [{
+                            label: 'Votes ',
+                            data: [],
+                            backgroundColor: ['rgb(255, 99, 132)', 'rgb(54, 162, 235)', 'rgb(255, 205, 86)', 'rgb(35, 46, 46)', 'rgb(114, 145, 190)', 'rgb(90, 189, 45)', 'rgb(240, 200, 133)'] 
+                        }]
+                },
+            options: {
+                responsive: false,
+                }
+                }
+            );    
+
+        function updateChart(type_chart, main_label,labels, data){
+            if (type_chart=='line') {
+                show_para('para2');
+                hide_para('para1', 'para3');
+                hideChart("pie");
+                hideChart("bar");
+                bar.update();
+                pie.update();
+                showChart("line");
+                line.data.labels = labels;
+                line.data.datasets[0].data = data;
+                line.data.datasets[0].label = main_label;
+                line.update();
+
             }
-        );     
-    </script>
-
-    <script>
-    
-    function updateChart(type_chart, main_label,labels, data){
-        if (type_chart=='line') {
-            hideChart("pie");
-            hideChart("bar");
-            bar.update();
-            pie.update();
-            showChart("line");
-            line.data.labels = labels;
-            line.data.datasets[0].data = data;
-            line.data.datasets[0].label = main_label;
-            line.update();
+            if (type_chart=="pie") {
+                show_para('para1');
+                hide_para('para2', 'para3');
+                hideChart("line");
+                hideChart("bar");
+                line.update();
+                bar.update();
+                showChart("pie");
+                pie.data.labels = labels;
+                pie.data.datasets[0].data = data;
+                pie.data.datasets[0].label = main_label;
+                pie.update();
+            }
+            
+            if (type_chart=="bar") {
+                show_para('para3'); 
+                hide_para('para2', 'para1');
+                hideChart("line");
+                hideChart("pie");
+                line.update(); 
+                pie.update();
+                showChart("bar");
+                bar.data.labels = labels;
+                bar.data.datasets[0].data = data;
+                bar.data.datasets[0].label = main_label;
+                bar.update();
+            }
 
         }
-        if (type_chart=="pie") {
-            hideChart("line");
-            hideChart("bar");
-            line.update();
-            bar.update();
-            showChart("pie");
-            pie.data.labels = labels;
-            pie.data.datasets[0].data = data;
-            pie.data.datasets[0].label = main_label;
-            pie.update();
+                
+        function hideChart(id) {
+            document.getElementById(id).style.display="none";
         }
-        
-        if (type_chart=="bar") {
-            hideChart("line");
-            hideChart("pie");
-            line.update(); 
-            pie.update();
-            showChart("bar");
-            bar.data.labels = labels;
-            bar.data.datasets[0].data = data;
-            bar.data.datasets[0].label = main_label;
-            bar.update();
+        function showChart(id) {
+            document.getElementById(id).style.display="";
+        }
+        function show_para(id) {
+            document.getElementById(id).style.display="";
+
+        }
+        function hide_para(id_one, id_two) {
+            document.getElementById(id_one).style.display="none";
+            document.getElementById(id_two).style.display="none";
         }
 
-    }
-        
 
-    function hideChart(id) {
-        document.getElementById(id).style.display="none";
-    }
-    function showChart(id) {
-        document.getElementById(id).style.display="";
-    }
-    function show_para(id) {
-        document.getElementById(id).style.display="";
-
-    }
-    function hide_para(id_one, id_two) {
-        document.getElementById(id_one).style.display="none";
-        document.getElementById(id_two).style.display="none";
-    }
     </script>
 
     <p id="para1" style="display: none;">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at odio et lectus volutpat feugiat. Integer vel nisi hendrerit, accumsan mi a, scelerisque sem. Quisque venenatis pharetra tellus, vitae blandit velit tincidunt ut. Nulla euismod lorem lorem, sit amet lobortis felis molestie id. Praesent id sapien ut ante posuere tincidunt id nec turpis. Nulla venenatis fringilla dui vitae accumsan. Nullam sollicitudin sem lacus, et ornare libero egestas in. Proin eleifend sit amet orci at venenatis.
 
-    Cras finibus est vitae neque scelerisque gravida. Praesent pretium eget lorem at lacinia. Vivamus eu tempor arcu, quis imperdiet velit. Proin tristique quam a tincidunt varius. Vivamus laoreet scelerisque augue, eu fringilla metus eleifend a. Vestibulum nec semper dui, eu dignissim justo. Maecenas at eros quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc cursus tortor nibh, in efficitur eros aliquam in. Nunc id metus nec enim consequat pharetra. Sed nisl dolor, congue ac volutpat et, ornare sit amet libero. Nam varius ut urna id suscipit.
+        Cras finibus est vitae neque scelerisque gravida. Praesent pretium eget lorem at lacinia. Vivamus eu tempor arcu, quis imperdiet velit. Proin tristique quam a tincidunt varius. Vivamus laoreet scelerisque augue, eu fringilla metus eleifend a. Vestibulum nec semper dui, eu dignissim justo. Maecenas at eros quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc cursus tortor nibh, in efficitur eros aliquam in. Nunc id metus nec enim consequat pharetra. Sed nisl dolor, congue ac volutpat et, ornare sit amet libero. Nam varius ut urna id suscipit.
     </p>
+
     <p id="para2" style="display: none;">
         Nunc maximus placerat tellus, ut aliquam ligula semper a. Phasellus rhoncus augue odio, vel venenatis erat viverra nec. Vivamus lectus sapien, ultricies vitae vestibulum ac, accumsan id mauris. Donec sed turpis diam. Fusce commodo, urna vitae volutpat sodales, enim justo egestas eros, in tincidunt erat massa a nisl. Duis et mauris malesuada sapien dignissim interdum. Nulla laoreet at lacus ut tempus. Proin interdum porta mauris at sagittis. Aliquam nec lectus viverra ligula semper placerat. Proin ac tincidunt urna. Sed diam sapien, vehicula ut maximus et, sagittis non ligula. Suspendisse feugiat augue sit amet lectus elementum volutpat. Pellentesque fermentum massa vel neque mollis, a hendrerit lorem posuere. Morbi sapien elit, euismod ac lobortis vitae, faucibus et velit. Sed congue porttitor faucibus. Nam sem odio, dictum a erat id, ornare consequat dolor.
     </p>
+    
     <p id="para3" style="display: none;">
         Ut ut elit justo. Curabitur non venenatis velit. Sed tincidunt eros feugiat erat sodales tincidunt. Proin sit amet sem nec nisl suscipit lacinia. Donec a lorem rutrum felis tempus eleifend ac ac ipsum. Phasellus elementum luctus fringilla. Duis mattis, nunc nec faucibus malesuada, diam risus sagittis orci, vel convallis turpis sapien cursus diam. Maecenas et orci sed orci accumsan cursus sed nec ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec pellentesque blandit vehicula.
 
-    Aliquam accumsan, mi id elementum lacinia, sapien metus pretium augue, ac ultricies nisi velit congue quam. Donec mattis lobortis gravida. Proin vel ullamcorper mi. Proin porttitor sapien felis, ut fringilla leo auctor id. Vestibulum interdum diam vitae egestas pellentesque. Donec porta, diam at facilisis lobortis, mi nisl mollis mauris, non porttitor elit odio in libero. Nunc blandit arcu gravida felis facilisis, eget elementum urna rhoncus. Cras nec luctus purus, sed tempor nisl. Phasellus efficitur aliquet blandit.
+        Aliquam accumsan, mi id elementum lacinia, sapien metus pretium augue, ac ultricies nisi velit congue quam. Donec mattis lobortis gravida. Proin vel ullamcorper mi. Proin porttitor sapien felis, ut fringilla leo auctor id. Vestibulum interdum diam vitae egestas pellentesque. Donec porta, diam at facilisis lobortis, mi nisl mollis mauris, non porttitor elit odio in libero. Nunc blandit arcu gravida felis facilisis, eget elementum urna rhoncus. Cras nec luctus purus, sed tempor nisl. Phasellus efficitur aliquet blandit.
     </p>
 {% endblock %}
 
