--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/740ac721d2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="static/style.css"> 
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <title>
@@ -31,7 +32,7 @@
         <div class="footer-content">
             <div class="footer-section about">
                 <h1 class="logo-text"><span>Oak Analytics</span></h1><br>
-              <p class="text_to_justify"> Voici notre site de l'analyse des stats de la ferme des 3 chênes. Celui-ci propose une analyse par graphe des données de la ferme des trois chênes.</p> 
+              <p class="text_to_justify"> Voici notre site de l'analyse des données de la ferme des 3 chênes. Celui-ci propose une analyse par graphe des données de cette ferme.</p> 
               <br> 
             </div>
             <div class="footer-section links">
