--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -19,9 +19,9 @@ La ferme des 3 chênes: Home
 <br>
 <section>
     <ul class="square_point">
-        <li>Une ferme remplie de veaux, vaches, génisses de race Holstein et Jersey. Ces vaches nous donnent leurs bons laits remplies calcium pour des os solides</li>
-        <li>Point 2</li>
-        <li>Point 3</li> 
+        <li>Une ferme remplie de veaux, vaches, génisses de race Holstein et Jersey. Ces vaches nous fournissent en lait localement et dans le respect de l'animal.</li> <br>
+        <li>Cette ferme s'occupe aussi de l'alimentation de leurs vaches, par différents champs de froment, betteraves, colza, épeautre, escourgeon, maïs, mélanges d'herbes fourragères. Le surplus est vendu afin de produire du pain, sucre, huile pour l'homme. </li> <br>
+        <li>De plus, cette ferme organise des visites permettant à n'importe qui de découvrir les activités de saison de la ferme. Si vous souhaitez plus d'informations sur la ferme des 3 Chênes, n'hésitez pas à visiter <a href="http://www.lafermedestroischenes.be/" style="color: rgb(168, 168, 255);">leur site</a>. </li> 
     </ul>
 </section>
 <br><br><br><br>
