massive update in function.py to make it useable

--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -40,8 +40,8 @@ La ferme des 3 chênes: Analytics
         <select name="graphe" id="graphe">
             <option value="">--Graphe à afficher--</option>
             <option value="moon">Pleine Lune</option>
-            <option value="naissance">Naissance</option>
-            <option value="population">Population</option>
+            <option value="naissance">Vêlages</option>
+            <option value="races">Distribution des races</option>
         </select>
         </p>
         <br>
