--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -45,9 +45,8 @@ La ferme des 3 chênes: Analytics
         </select>
         </p>
         <br>
-        <input type="submit" value="Afficher le Graphe">
+        <input type="submit" value="Afficher le Graphe" id="show_graph" title="Afficher le Graphe"/>
     </form>
     
     
 {% endblock %}
-
