--- a/flaskr/templates/graph.html
+++ b/flaskr/templates/graph.html
@@ -71,7 +71,16 @@ Analytics Graph
                     }]
             },
         options: {
-            responsive: false }
+            responsive: false,
+            scales: {
+                yAxes : [{
+                    display: true,
+                    ticks: {
+                        beginAtZero: true 
+                    }
+                }]
+            }
+            }
             }
         );
 
