--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -26,18 +26,180 @@ La ferme des 3 chênes: Analytics
         </p>
         <br>
         <p>
-        <label for="familles">Famille à choisir:</label>
-        <select name="familles" id="familles">
+        <label for="familles">Famille à choisir: </label> 
+        <select name="familles" class="select2" id="familles">
             <option value="">--Famille à sélectionner--</option>
-            <option value="Famille1">Famille 1</option>
-            <option value="Famille2">Famille 2</option>
-            <option value="Famille3">Famille 3</option>
+            <option value=Margueritte>Margueritte</option>
+            <option value=Jonquille>Jonquille</option>
+            <option value=Lila>Lila</option>
+            <option value=Paquerette>Paquerette</option>
+            <option value=Agapanthe>Agapanthe</option>
+            <option value=Bleuet>Bleuet</option>
+            <option value=Ciboulette>Ciboulette</option>
+            <option value=Iris>Iris</option>
+            <option value=Lavande>Lavande</option>
+            <option value=Lotus>Lotus</option>
+            <option value=Hélène>Hélène</option>
+            <option value=Milka>Milka</option>
+            <option value=Cote_d_Or>Côte d'Or</option>
+            <option value=Lindt>Lindt</option>
+            <option value=Toblerone>Toblerone</option>
+            <option value=Galak>Galak</option>
+            <option value=KitKat>KitKat</option>
+            <option value=Kinder>Kinder</option>
+            <option value=Narcisse>Narcisse</option>
+            <option value=Orchidée>Orchidée</option>
+            <option value=Pissenlit>Pissenlit</option>
+            <option value=Tournesol>Tournesol</option>
+            <option value=Vincent>Vincent</option>
+            <option value=Trompette>Trompette</option>
+            <option value=Minnie>Minnie</option>
+            <option value=Rosette>Rosette</option>
+            <option value=Blondie>Blondie</option>
+            <option value=Caprice>Caprice</option>
+            <option value=Betty>Betty</option>
+            <option value=Noisette>Noisette</option>
+            <option value=Margot>Margot</option>
+            <option value=Réglisse>Réglisse</option>
+            <option value=Ruby>Ruby</option>
+            <option value=Rustique>Rustique</option>
+            <option value=Raymonde>Raymonde</option>
+            <option value=Sky>Sky</option>
+            <option value=Snow>Snow</option>
+            <option value=Sauterelle>Sauterelle</option>
+            <option value=Star>Star</option>
+            <option value=Sidonie>Sidonie</option>
+            <option value=Saturne>Saturne</option>
+            <option value=Sorbet>Sorbet</option>
+            <option value=Sonette>Sonette</option>
+            <option value=Summer>Summer</option>
+            <option value=Plume>Plume</option>
+            <option value=Peluche>Peluche</option>
+            <option value=Pamela>Pamela</option>
+            <option value=Panade>Panade</option>
+            <option value=Perle>Perle</option>
+            <option value=Papaye>Papaye</option>
+            <option value=Renaud>Renaud</option>
+            <option value=Papyrus>Papyrus</option>
+            <option value=Potache>Potache</option>
+            <option value=Pomme>Pomme</option>
+            <option value=Pascaline>Pascaline</option>
+            <option value=Pink>Pink</option>
+            <option value=Provence>Provence</option>
+            <option value=Prune>Prune</option>
+            <option value=Paula>Paula</option>
+            <option value=Paupiette>Paupiette</option>
+            <option value=Pupuce>Pupuce</option>
+            <option value=Oasis>Oasis</option>
+            <option value=Ocarina>Ocarina</option>
+            <option value=Orange>Orange</option>
+            <option value=Orage>Orage</option>
+            <option value=Origami>Origami</option>
+            <option value=Odile>Odile</option>
+            <option value=Ollande>Ollande</option>
+            <option value=Olympe>Olympe</option>
+            <option value=Oméga>Oméga</option>
+            <option value=Otaria>Otaria</option>
+            <option value=Okaly>Okaly</option>
+            <option value=Onyx>Onyx</option>
+            <option value=Olive>Olive</option>
+            <option value=Origan>Origan</option>
+            <option value=Ovalie>Ovalie</option>
+            <option value=Ophélie>Ophélie</option>
+            <option value=Ophia>Ophia</option>
+            <option value=Ninette>Ninette</option>
+            <option value=Ayham>Ayham</option>
+            <option value=Ninon>Ninon</option>
+            <option value=Naya>Naya</option>
+            <option value=Naza>Naza</option>
+            <option value=Nadine>Nadine</option>
+            <option value=Nitendo>Nitendo</option>
+            <option value=Neda>Neda</option>
+            <option value=Noire>Noire</option>
+            <option value=Blanche>Blanche</option>
+            <option value=Nairobi>Nairobi</option>
+            <option value=Nolvenn>Nolvenn</option>
+            <option value=Nela>Nela</option>
+            <option value=Nora>Nora</option>
+            <option value=Fraise>Fraise</option>
+            <option value=Banane>Banane</option>
+            <option value=Poire>Poire</option>
+            <option value=Citron>Citron</option>
+            <option value=Benoit>Benoît</option>
+            <option value=Normande>Normande</option>
+            <option value=Norma>Norma</option>
+            <option value=Neptune>Neptune</option>
+            <option value=Neslie>Neslie</option>
+            <option value=Nancy>Nancy</option>
+            <option value=Nostalgie>Nostalgie</option>
+            <option value=Nouille>Nouille</option>
+            <option value=Naomi>Naomi</option>
+            <option value=Nourrice>Nourrice</option>
+            <option value=Nounou>Nounou</option>
+            <option value=Nice>Nice</option>
+            <option value=Nubia>Nubia</option>
+            <option value=Nash>Nash</option>
+            <option value=Numerobis>Numerobis</option>
+            <option value=Nuggets>Nuggets</option>
+            <option value=Nassma>Nassma</option>
+            <option value=Nya>Nya</option>
+            <option value=Nilla>Nilla</option>
+            <option value=Nathalia>Nathalia</option>
+            <option value=Nina>Nina</option>
+            <option value=Nima>Nima</option>
+            <option value=Rubarbe>Rubarbe</option>
+            <option value=Maserati>Maserati</option>
+            <option value=Mercedes>Mercedes</option>
+            <option value=Ferraris>Ferraris</option>
+            <option value=Ford>Ford</option>
+            <option value=Citroenne>Citroenne</option>
+            <option value=Jeep>Jeep</option>
+            <option value=Magma>Magma</option>
+            <option value=Maite>Maite</option>
+            <option value=Madi>Madi</option>
+            <option value=Motorola>Motorola</option>
+            <option value=Mirabelle>Mirabelle</option>
+            <option value=Mazda>Mazda</option>
+            <option value=Fiesta>Fiesta</option>
+            <option value=Malaisie>Malaisie</option>
+            <option value=Mamamia>Mamamia</option>
+            <option value=Météorite>Météorite</option>
+            <option value=Moutarde>Moutarde</option>
+            <option value=Mosaic>Mosaic</option>
+            <option value=Moselle>Moselle</option>
+            <option value=Mandala>Mandala</option>
+            <option value=Meringue>Meringue</option>
+            <option value=Micheline>Micheline</option>
+            <option value=Midas>Midas</option>
+            <option value=Mimosa>Mimosa</option>
+            <option value=Myrtille>Myrtille</option>
+            <option value=Mystic>Mystic</option>
+            <option value=Mushroom>Mushroom</option>
+            <option value=Moussaka>Moussaka</option>
+            <option value=Moon>Moon</option>
+            <option value=Mastar>Mastar</option>
+            <option value=Céline>Céline</option>
+            <option value=Mina>Mina</option>
+            <option value=Macaroni>Macaroni</option>
+            <option value=Madona>Madona</option>
+            <option value=Majestic>Majestic</option>
+            <option value=Bessie>Bessie</option>
+            <option value=Clarabelle>Clarabelle</option>
+            <option value=Penny>Penny</option>
+            <option value=Dottie>Dottie</option>
+            <option value=Tonnerre>Tonnerre</option>
+            <option value=Oreo>Oreo</option>
+            <option value=Panda>Panda</option>
+            <option value=Bimbo>Bimbo</option>
+            <option value=Moka>Moka</option>
+            <option value=Mélasse>Mélasse</option>
+            <option value=Unknown>Unknown</option>
         </select>
         </p>
         <br>
         <p>
-        <label for="graphe">Graphe à afficher</label>
-        <select name="graphe" id="graphe">
+        <label for="graphe">Graphe à afficher: </label>
+        <select name="graphe" class="select2" id="graphe">
             <option value="">--Graphe à afficher--</option>
             <option value="moon">Pleine Lune</option>
             <option value="naissance">Vêlages</option>
@@ -47,6 +209,5 @@ La ferme des 3 chênes: Analytics
         <br>
         <input type="submit" value="Afficher le Graphe" id="show_graph" title="Afficher le Graphe"/>
     </form>
-    
     
 {% endblock %}
