--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
   <script src="https://kit.fontawesome.com/740ac721d2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="static/style.css"> 
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
@@ -70,6 +73,12 @@
         </div>
     </div>
   </footer>
+  <script>
+    $(document).ready(function () {
+    //change selectboxes to selectize mode to be searchable
+      $("select").select2();
+});
+    </script> 
 </body>
 
 </html>
