--- a/flaskr/templates/analytics.html
+++ b/flaskr/templates/analytics.html
@@ -33,171 +33,171 @@ La ferme des 3 chênes: Analytics
         <label for="familles">Famille à choisir: </label> 
         <select name="familles" class="select2" id="familles" style="width: 10%;">
             <option value="">Sélectionner</option>
-            <option value=Margueritte>Margueritte</option>
-            <option value=Jonquille>Jonquille</option>
-            <option value=Lila>Lila</option>
-            <option value=Paquerette>Paquerette</option>
-            <option value=Agapanthe>Agapanthe</option>
-            <option value=Bleuet>Bleuet</option>
-            <option value=Ciboulette>Ciboulette</option>
-            <option value=Iris>Iris</option>
-            <option value=Lavande>Lavande</option>
-            <option value=Lotus>Lotus</option>
-            <option value=Hélène>Hélène</option>
-            <option value=Milka>Milka</option>
-            <option value=Cote_d_Or>Côte d'Or</option>
-            <option value=Lindt>Lindt</option>
-            <option value=Toblerone>Toblerone</option>
-            <option value=Galak>Galak</option>
-            <option value=KitKat>KitKat</option>
-            <option value=Kinder>Kinder</option>
-            <option value=Narcisse>Narcisse</option>
-            <option value=Orchidée>Orchidée</option>
-            <option value=Pissenlit>Pissenlit</option>
-            <option value=Tournesol>Tournesol</option>
-            <option value=Vincent>Vincent</option>
-            <option value=Trompette>Trompette</option>
-            <option value=Minnie>Minnie</option>
-            <option value=Rosette>Rosette</option>
-            <option value=Blondie>Blondie</option>
-            <option value=Caprice>Caprice</option>
-            <option value=Betty>Betty</option>
-            <option value=Noisette>Noisette</option>
-            <option value=Margot>Margot</option>
-            <option value=Réglisse>Réglisse</option>
-            <option value=Ruby>Ruby</option>
-            <option value=Rustique>Rustique</option>
-            <option value=Raymonde>Raymonde</option>
-            <option value=Sky>Sky</option>
-            <option value=Snow>Snow</option>
-            <option value=Sauterelle>Sauterelle</option>
-            <option value=Star>Star</option>
-            <option value=Sidonie>Sidonie</option>
-            <option value=Saturne>Saturne</option>
-            <option value=Sorbet>Sorbet</option>
-            <option value=Sonette>Sonette</option>
-            <option value=Summer>Summer</option>
-            <option value=Plume>Plume</option>
-            <option value=Peluche>Peluche</option>
-            <option value=Pamela>Pamela</option>
-            <option value=Panade>Panade</option>
-            <option value=Perle>Perle</option>
-            <option value=Papaye>Papaye</option>
-            <option value=Renaud>Renaud</option>
-            <option value=Papyrus>Papyrus</option>
-            <option value=Potache>Potache</option>
-            <option value=Pomme>Pomme</option>
-            <option value=Pascaline>Pascaline</option>
-            <option value=Pink>Pink</option>
-            <option value=Provence>Provence</option>
-            <option value=Prune>Prune</option>
-            <option value=Paula>Paula</option>
-            <option value=Paupiette>Paupiette</option>
-            <option value=Pupuce>Pupuce</option>
-            <option value=Oasis>Oasis</option>
-            <option value=Ocarina>Ocarina</option>
-            <option value=Orange>Orange</option>
-            <option value=Orage>Orage</option>
-            <option value=Origami>Origami</option>
-            <option value=Odile>Odile</option>
-            <option value=Ollande>Ollande</option>
-            <option value=Olympe>Olympe</option>
-            <option value=Oméga>Oméga</option>
-            <option value=Otaria>Otaria</option>
-            <option value=Okaly>Okaly</option>
-            <option value=Onyx>Onyx</option>
-            <option value=Olive>Olive</option>
-            <option value=Origan>Origan</option>
-            <option value=Ovalie>Ovalie</option>
-            <option value=Ophélie>Ophélie</option>
-            <option value=Ophia>Ophia</option>
-            <option value=Ninette>Ninette</option>
-            <option value=Ayham>Ayham</option>
-            <option value=Ninon>Ninon</option>
-            <option value=Naya>Naya</option>
-            <option value=Naza>Naza</option>
-            <option value=Nadine>Nadine</option>
-            <option value=Nitendo>Nitendo</option>
-            <option value=Neda>Neda</option>
-            <option value=Noire>Noire</option>
-            <option value=Blanche>Blanche</option>
-            <option value=Nairobi>Nairobi</option>
-            <option value=Nolvenn>Nolvenn</option>
-            <option value=Nela>Nela</option>
-            <option value=Nora>Nora</option>
-            <option value=Fraise>Fraise</option>
-            <option value=Banane>Banane</option>
-            <option value=Poire>Poire</option>
-            <option value=Citron>Citron</option>
-            <option value=Benoit>Benoît</option>
-            <option value=Normande>Normande</option>
-            <option value=Norma>Norma</option>
-            <option value=Neptune>Neptune</option>
-            <option value=Neslie>Neslie</option>
-            <option value=Nancy>Nancy</option>
-            <option value=Nostalgie>Nostalgie</option>
-            <option value=Nouille>Nouille</option>
-            <option value=Naomi>Naomi</option>
-            <option value=Nourrice>Nourrice</option>
-            <option value=Nounou>Nounou</option>
-            <option value=Nice>Nice</option>
-            <option value=Nubia>Nubia</option>
-            <option value=Nash>Nash</option>
-            <option value=Numerobis>Numerobis</option>
-            <option value=Nuggets>Nuggets</option>
-            <option value=Nassma>Nassma</option>
-            <option value=Nya>Nya</option>
-            <option value=Nilla>Nilla</option>
-            <option value=Nathalia>Nathalia</option>
-            <option value=Nina>Nina</option>
-            <option value=Nima>Nima</option>
-            <option value=Rubarbe>Rubarbe</option>
-            <option value=Maserati>Maserati</option>
-            <option value=Mercedes>Mercedes</option>
-            <option value=Ferraris>Ferraris</option>
-            <option value=Ford>Ford</option>
-            <option value=Citroenne>Citroenne</option>
-            <option value=Jeep>Jeep</option>
-            <option value=Magma>Magma</option>
-            <option value=Maite>Maite</option>
-            <option value=Madi>Madi</option>
-            <option value=Motorola>Motorola</option>
-            <option value=Mirabelle>Mirabelle</option>
-            <option value=Mazda>Mazda</option>
-            <option value=Fiesta>Fiesta</option>
-            <option value=Malaisie>Malaisie</option>
-            <option value=Mamamia>Mamamia</option>
-            <option value=Météorite>Météorite</option>
-            <option value=Moutarde>Moutarde</option>
-            <option value=Mosaic>Mosaic</option>
-            <option value=Moselle>Moselle</option>
-            <option value=Mandala>Mandala</option>
-            <option value=Meringue>Meringue</option>
-            <option value=Micheline>Micheline</option>
-            <option value=Midas>Midas</option>
-            <option value=Mimosa>Mimosa</option>
-            <option value=Myrtille>Myrtille</option>
-            <option value=Mystic>Mystic</option>
-            <option value=Mushroom>Mushroom</option>
-            <option value=Moussaka>Moussaka</option>
-            <option value=Moon>Moon</option>
-            <option value=Mastar>Mastar</option>
-            <option value=Céline>Céline</option>
-            <option value=Mina>Mina</option>
-            <option value=Macaroni>Macaroni</option>
-            <option value=Madona>Madona</option>
-            <option value=Majestic>Majestic</option>
-            <option value=Bessie>Bessie</option>
-            <option value=Clarabelle>Clarabelle</option>
-            <option value=Penny>Penny</option>
-            <option value=Dottie>Dottie</option>
-            <option value=Tonnerre>Tonnerre</option>
-            <option value=Oreo>Oreo</option>
-            <option value=Panda>Panda</option>
-            <option value=Bimbo>Bimbo</option>
-            <option value=Moka>Moka</option>
-            <option value=Mélasse>Mélasse</option>
-            <option value=Unknown>Unknown</option>
+            <option value=134>Margueritte</option>
+            <option value=45>Jonquille</option>
+            <option value=157>Lila</option>
+            <option value=99>Paquerette</option>
+            <option value=65>Agapanthe</option>
+            <option value=149>Bleuet</option>
+            <option value=61>Ciboulette</option>
+            <option value=141>Iris</option>
+            <option value=161>Lavande</option>
+            <option value=117>Lotus</option>
+            <option value=164>Hélène</option>
+            <option value=123>Milka</option>
+            <option value=16>Côte d'Or</option>
+            <option value=77>Lindt</option>
+            <option value=139>Toblerone</option>
+            <option value=1>Galak</option>
+            <option value=92>KitKat</option>
+            <option value=116>Kinder</option>
+            <option value=30>Narcisse</option>
+            <option value=120>Orchidée</option>
+            <option value=47>Pissenlit</option>
+            <option value=96>Tournesol</option>
+            <option value=4>Vincent</option>
+            <option value=79>Trompette</option>
+            <option value=29>Minnie</option>
+            <option value=140>Rosette</option>
+            <option value=85>Blondie</option>
+            <option value=104>Caprice</option>
+            <option value=82>Betty</option>
+            <option value=97>Noisette</option>
+            <option value=10>Margot</option>
+            <option value=2>Réglisse</option>
+            <option value=15>Ruby</option>
+            <option value=126>Rustique</option>
+            <option value=144>Raymonde</option>
+            <option value=152>Sky</option>
+            <option value=110>Snow</option>
+            <option value=146>Sauterelle</option>
+            <option value=111>Star</option>
+            <option value=147>Sidonie</option>
+            <option value=50>Saturne</option>
+            <option value=17>Sorbet</option>
+            <option value=115>Sonette</option>
+            <option value=94>Summer</option>
+            <option value=63>Plume</option>
+            <option value=35>Peluche</option>
+            <option value=84>Pamela</option>
+            <option value=5>Panade</option>
+            <option value=69>Perle</option>
+            <option value=136>Papaye</option>
+            <option value=26>Renaud</option>
+            <option value=39>Papyrus</option>
+            <option value=22>Potache</option>
+            <option value=74>Pomme</option>
+            <option value=25>Pascaline</option>
+            <option value=48>Pink</option>
+            <option value=67>Provence</option>
+            <option value=148>Prune</option>
+            <option value=33>Paula</option>
+            <option value=18>Paupiette</option>
+            <option value=83>Pupuce</option>
+            <option value=21>Oasis</option>
+            <option value=80>Ocarina</option>
+            <option value=12>Orange</option>
+            <option value=91>Orage</option>
+            <option value=32>Origami</option>
+            <option value=20>Odile</option>
+            <option value=108>Ollande</option>
+            <option value=13>Olympe</option>
+            <option value=81>Oméga</option>
+            <option value=145>Otaria</option>
+            <option value=121>Okaly</option>
+            <option value=38>Onyx</option>
+            <option value=73>Olive</option>
+            <option value=106>Origan</option>
+            <option value=54>Ovalie</option>
+            <option value=75>Ophélie</option>
+            <option value=98>Ophia</option>
+            <option value=102>Ninette</option>
+            <option value=28>Ayham</option>
+            <option value=88>Ninon</option>
+            <option value=162>Naya</option>
+            <option value=138>Naza</option>
+            <option value=118>Nadine</option>
+            <option value=66>Nitendo</option>
+            <option value=154>Neda</option>
+            <option value=150>Noire</option>
+            <option value=129>Blanche</option>
+            <option value=142>Nairobi</option>
+            <option value=90>Nolvenn</option>
+            <option value=124>Nela</option>
+            <option value=70>Nora</option>
+            <option value=127>Fraise</option>
+            <option value=100>Banane</option>
+            <option value=72>Poire</option>
+            <option value=46>Citron</option>
+            <option value=119>Benoît</option>
+            <option value=128>Normande</option>
+            <option value=76>Norma</option>
+            <option value=135>Neptune</option>
+            <option value=27>Neslie</option>
+            <option value=40>Nancy</option>
+            <option value=8>Nostalgie</option>
+            <option value=156>Nouille</option>
+            <option value=109>Naomi</option>
+            <option value=11>Nourrice</option>
+            <option value=19>Nounou</option>
+            <option value=95>Nice</option>
+            <option value=9>Nubia</option>
+            <option value=23>Nash</option>
+            <option value=112>Numerobis</option>
+            <option value=114>Nuggets</option>
+            <option value=42>Nassma</option>
+            <option value=87>Nya</option>
+            <option value=163>Nilla</option>
+            <option value=159>Nathalia</option>
+            <option value=158>Nina</option>
+            <option value=36>Nima</option>
+            <option value=6>Rubarbe</option>
+            <option value=31>Maserati</option>
+            <option value=78>Mercedes</option>
+            <option value=43>Ferraris</option>
+            <option value=14>Ford</option>
+            <option value=86>Citroenne</option>
+            <option value=155>Jeep</option>
+            <option value=151>Magma</option>
+            <option value=137>Maite</option>
+            <option value=51>Madi</option>
+            <option value=62>Motorola</option>
+            <option value=24>Mirabelle</option>
+            <option value=59>Mazda</option>
+            <option value=153>Fiesta</option>
+            <option value=122>Malaisie</option>
+            <option value=34>Mamamia</option>
+            <option value=49>Météorite</option>
+            <option value=130>Moutarde</option>
+            <option value=113>Mosaic</option>
+            <option value=132>Moselle</option>
+            <option value=133>Mandala</option>
+            <option value=53>Meringue</option>
+            <option value=58>Micheline</option>
+            <option value=101>Midas</option>
+            <option value=107>Mimosa</option>
+            <option value=3>Myrtille</option>
+            <option value=103>Mystic</option>
+            <option value=41>Mushroom</option>
+            <option value=93>Moussaka</option>
+            <option value=52>Moon</option>
+            <option value=60>Mastar</option>
+            <option value=68>Céline</option>
+            <option value=143>Mina</option>
+            <option value=131>Macaroni</option>
+            <option value=44>Madona</option>
+            <option value=56>Majestic</option>
+            <option value=57>Bessie</option>
+            <option value=37>Clarabelle</option>
+            <option value=125>Penny</option>
+            <option value=105>Dottie</option>
+            <option value=160>Tonnerre</option>
+            <option value=55>Oreo</option>
+            <option value=64>Panda</option>
+            <option value=7>Bimbo</option>
+            <option value=71>Moka</option>
+            <option value=89>Mélasse</option>
+            <option value=500>Unknown</option>
         </select>
         </p>
         <br>
